fixed splash on mobile

--- a/style.css
+++ b/style.css
@@ -1625,6 +1625,7 @@ textarea .form-control {
 	}
 	
 	#splash-logo{
+		width: 150px;
 		margin-top: 15px;
 	}
 	
